--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <!-- bootstraps icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" />
     <!-- akhir icon -->
-    +
+
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
@@ -71,13 +73,13 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text text-center">
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="fade-right" data-aos-offset="500">
             <p>
               Merdeka Belajar, slogan yang dipinjam sebagai program kebijakan baru Kementerian Pendidikan dan Kebudayaan Republik Indonesia (Kemendikbud RI) dicanangkan oleh Menteri Pendidikan dan Kebudayaan RI Kabinet Indonesia Maju,
               Nadiem Anwar Makarim
             </p>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="fade-left" data-aos-offset="600">
             <p>
               "Merdeka Belajar" paling tepat digunakan sebagai filosofi perubahan dari metode pembelajaran yang terjadi selama ini. Sebab, dalam "Merdeka Belajar" terdapat kemandirian dan kemerdekaan bagi lingkungan pendidikan menentukan
               sendiri cara terbaik dalam proses pembelajaran.
@@ -105,7 +107,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="50">
               <img src="img/projects/2.png" class="card-img-top" alt="1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -113,7 +115,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
               <img src="img/projects/4.png" class="card-img-top" alt="1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -121,7 +123,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="200">
               <img src="img/projects/5.png" class="card-img-top" alt="1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -129,7 +131,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="300">
               <img src="img/projects/1.png" class="card-img-top" alt="1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -137,7 +139,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="400">
               <img src="img/projects/7.png" class="card-img-top" alt="1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -209,6 +211,15 @@
     <!-- akhir footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script>
+      gsap.from(".jumbotron img", { duration: 1, y: -100, opacity: 0 });
+    </script>
 
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbx9BO_pn3_V1CmAoafwQslRtxRVd1M6U9zRiOp1DdsICCCBEgYvect8NvDS_2hYFsgD/exec";
