mengurangi fitur gsap

--- a/index.html
+++ b/index.html
@@ -217,9 +217,7 @@
       AOS.init();
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script>
-      gsap.from(".jumbotron img", { duration: 1, y: -100, opacity: 0 });
-    </script>
+    <script></script>
 
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbx9BO_pn3_V1CmAoafwQslRtxRVd1M6U9zRiOp1DdsICCCBEgYvect8NvDS_2hYFsgD/exec";
