mengganti fade dengan zoom in

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text text-center">
-          <div class="col-md-4 mb-3" data-aos="fade-right" data-aos-duration="1000">
+          <div class="col-md-4 mb-3" data-aos="zoom-in" data-aos-duration="500">
             <p>
               Merdeka Belajar, slogan yang dipinjam sebagai program kebijakan baru Kementerian Pendidikan dan Kebudayaan Republik Indonesia (Kemendikbud RI) dicanangkan oleh Menteri Pendidikan dan Kebudayaan RI Kabinet Indonesia Maju,
               Nadiem Anwar Makarim
             </p>
           </div>
-          <div class="col-md-4 mb-3" data-aos="fade-left" data-aos-duration="1100">
+          <div class="col-md-4 mb-3" data-aos="zoom-in" data-aos-duration="500">
             <p>
               "Merdeka Belajar" paling tepat digunakan sebagai filosofi perubahan dari metode pembelajaran yang terjadi selama ini. Sebab, dalam "Merdeka Belajar" terdapat kemandirian dan kemerdekaan bagi lingkungan pendidikan menentukan
               sendiri cara terbaik dalam proses pembelajaran.
